cmake_minimum_required(VERSION 3.27)
project(CDataFrameProject C)

set(CMAKE_C_STANDARD 11)

add_executable(CDataFrameProject main.c
        list.h
        list.h
        list.c
        column.h
        column.h
        column.c
        column.c
        cdataframe.h
        cdataframe.h
        cdataframe.c)
